2004-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-arrived-ignored-regexp): Add about:blank.
	(w3m-history-ignored-regexp): Ditto.
	(w3m-about-retrieve): Ditto.
	(w3m-buffer-setup): Prefer the last visited emacs-w3m buffer.

2004-05-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Stricten
	checking whether images are successfully retieved or not.

2004-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-clear-contents): Don't remove main
	text contents.

2004-05-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-get-headers): Enclosed
	with `save-excursion'.

	* shimbun/sb-namazu.el (shimbun-namazu-group-url-alist): Added
	"kakasi-dev".
	(shimbun-get-headers): Followed tha change of "emacs-w3m" ml
	archive.

2004-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-filter.el (w3m-filter-rules): Update its default value and
	its customize spec.

2004-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-dump-extra): Examine image data briefly to
	detect only gif, jpeg and png by itself.

	* w3m-util.el (w3m-image-type-from-data): Abolish.

2004-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-dump-extra): Check only 300 bytes at the top of
	the data.

2004-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-image-type-from-data): New function.  Suggested
	by KOSEKI Yoshinori <kose@meadowy.org>.

	* w3m.el (w3m-w3m-dump-extra): Use it.

2004-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-start-process): Use
	set-process-query-on-exit-flag if it is available.

	* w3m.el (w3m-w3m-dump-extra): Trust the magic at the beginning of
	image data rather than the content-type header.

2004-05-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-copy-buffer): Prefer cached contents without
	checking their validity.

2004-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>
